@@ -2,6 +2,7 @@ typedef struct GitFdwPlanState
 {
 	char	   *path;
 	char	   *branch;
+	char	   *git_search_path;
 	List	   *options;
 	BlockNumber pages;
 	double	    ntuples;
