@@ -15,5 +15,6 @@ CREATE FOREIGN TABLE
 SERVER git_fdw_server
 OPTIONS (
   path '/git_fdw/repo.git',
-  branch 'refs/heads/master'
+  branch 'refs/heads/master',
+  git_search_path '/optional/custom/search_path'
 );
