@@ -11,6 +11,7 @@
 * Add support for lines added/deleted/files changed
 * Add support for bare repositories
 * Add support for libgit2 up to v0.27
+* Add support for a custom git search path
 
 # Release 1.0.0
 
